--- a/index-login.html
+++ b/index-login.html
@@ -36,7 +36,7 @@
 
       </div> 
 
-      <div class="links"> <a href="forget pass.html">Forgot Password</a> <a href="Signup from.html">Signup</a> 
+      <div class="links"> <a href="index-forgetpass.html">Forgot Password</a> <a href="index-signup.html">Signup</a> 
 
       </div> 
 
