--- a/index-signup.html
+++ b/index-signup.html
@@ -54,7 +54,7 @@
 
     </div>
 
-      <div class="links"> <a href="forget pass.html">Forgot Password</a> <a href="Login form.html">Login</a> 
+      <div class="links"> <a href="index-forgetpass.html">Forgot Password</a> <a href="index-login.html">Login</a> 
 
       </div> 
 
